log-collection-ab/svc-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-collection-a
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: log-collection-a
