log-collection-ab/svc-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-collection-b
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: log-collection-b
