log-collection-ab/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: log-collection
  labels:
    argocd.argoproj.io/instance: log-collection
spec:
  host: log-collection-ab-test.apps.cluster-dd3c.dd3c.sandbox1351.opentlc.com
  to:
    kind: Service
    name: log-collection-a
    weight: 100
  alternateBackends:
  - kind: Service
    name: log-collection-b
    weight: 100 
  port:
    targetPort: 8080
  wildcardPolicy: None
